[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/objects/Door.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/objects/door.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00405375, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 48 ), Vector2( 16, 144 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 48 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 87, 48 )

[node name="Door" type="StaticBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 1 )

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 49.2983 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 16, 48 )
hframes = 9

[node name="EnterArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterArea"]
position = Vector2( 16, 48 )
shape = SubResource( 3 )
[connection signal="timeout" from="CloseTimer" to="." method="_on_CloseTimer_timeout"]
[connection signal="body_entered" from="EnterArea" to="." method="_on_EnterArea_body_entered"]
